--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -19,13 +19,14 @@
 .input-group input{
     height: 40px;
     width: 250px;
-    margin-left: 40px; 
+    margin-left: 30px; 
 }
 .form-submit{
     height: 40px;
-    width: 200px;
+    width: 250px;
     margin-top: 20px;
-    margin-left: 40px;
+    color: aliceblue;
+    margin-left: 30px;
     background-color: darkgray;  
 }
 .p-area{
