--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -13,13 +13,11 @@
     color: chocolate;
     margin-top: 15px;
 }
-.input-group label{
-    display: block;
-}
 .input-group input{
     height: 40px;
     width: 250px;
-    margin-left: 30px; 
+    margin-left: 30px;
+    margin-top: 30px;
 }
 .form-submit{
     height: 40px;
