--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -15,3 +15,8 @@
     margin-left: 80px;
     height: 35px;
 }
+.btn{
+    width: 200px;
+    background-color: blueviolet;
+    color: aliceblue;
+}
