--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -15,7 +15,7 @@
     margin-left: 80px;
     height: 35px;
 }
-.btn{
+.form-btn{
     width: 200px;
     background-color: blueviolet;
     color: aliceblue;
